WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127445
Crashes in DrawingAreaProxy::setExposedRect (null DrawingAreaProxy)
https://bugs.webkit.org/show_bug.cgi?id=127445
Summary
Crashes in DrawingAreaProxy::setExposedRect (null DrawingAreaProxy)
Tim Horton
Reported
2014-01-22 13:58:13 PST
When the WebPageProxy is closed, it nulls out the DrawingAreaProxy; we should avoid trying to call setExposedRect on a null DrawingAreaProxy for obvious reasons. <
rdar://problem/15807127
>
Attachments
patch
(2.20 KB, patch)
2014-01-22 14:04 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-22 14:04:01 PST
Created
attachment 221903
[details]
patch
Tim Horton
Comment 2
2014-01-22 14:38:42 PST
http://trac.webkit.org/changeset/162556
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug