Crashes in DrawingAreaProxy::setExposedRect (null DrawingAreaProxy) https://bugs.webkit.org/show_bug.cgi?id=127445

Reviewed by Anders Carlsson.

* UIProcess/API/ios/WKContentView.mm:
(-[WKContentView _updateViewExposedRect]):
* UIProcess/API/mac/WKView.mm:
(-[WKView _updateViewExposedRect]):
Null-check.


Canonical link: https://commits.webkit.org/145450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162556 268f45cc-cd09-0410-ab3c-d52691b4dbfc